# psyche

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  client-test-entrypoint.sh  docker-compose.yml  docker-entrypoint.sh  flake.nix  garnix.yaml  how-it-works.md  id.json  justfile  psyche_solana.Dockerfile  psyche_solana_entrypoint.sh  run-owner-entrypoint.sh  secrets.nix  todos.md  train-dupe.py  validator-entrypoint.sh
architectures/centralized/client/: Cargo.toml
architectures/centralized/client/src/: app.rs  main.rs
architectures/centralized/server/: Cargo.toml
architectures/centralized/server/src/: app.rs  dashboard.rs  lib.rs  main.rs  protocol.rs  tui.rs
architectures/centralized/shared/: Cargo.toml
architectures/centralized/shared/src/: lib.rs  payload.rs  protocol.rs
architectures/centralized/testing/: Cargo.toml
architectures/centralized/testing/src/: client.rs  client_test_utils.rs  lib.rs  server.rs  server_test_utils.rs  test_utils.rs
architectures/centralized/testing/tests/: integration_tests.rs
architectures/centralized/tests/: Cargo.toml
architectures/centralized/tests/src/: main.rs
architectures/decentralized/solana-authorizer/programs/solana-authorizer/: Cargo.toml
architectures/decentralized/solana-client/: Cargo.toml
architectures/decentralized/solana-client/src/: app.rs  backend.rs  lib.rs  main.rs  network_identity.rs  retry.rs
architectures/decentralized/solana-coordinator/programs/solana-coordinator/: Cargo.toml
architectures/decentralized/solana-mining-pool/programs/solana-mining-pool/: Cargo.toml  README.md
architectures/decentralized/solana-tooling/: Cargo.toml  Taskfile.yml  rustfmt.toml
architectures/decentralized/solana-tooling/src/: create_memnet_endpoint.rs  get_accounts.rs  lib.rs  process_authorizer_instructions.rs  process_coordinator_instructions.rs  process_treasurer_instructions.rs
architectures/decentralized/solana-tooling/tests/: mod.rs
architectures/decentralized/solana-tooling/tests/suites/: memnet_authorizer_full_cycle.rs  mod.rs  (+3 more)
architectures/decentralized/testing/: Cargo.toml
architectures/decentralized/testing/src/: chaos.rs  docker_setup.rs  docker_watcher.rs  lib.rs  utils.rs
architectures/decentralized/testing/tests/: chaos_tests.rs  integration_tests.rs
client/: Cargo.toml
client/src/: hub.rs  lib.rs
coordinator/: Cargo.toml
coordinator/src/: backend.rs  client.rs  committee_selection.rs  coordinator.rs  lib.rs  model.rs  state.rs  traits.rs  watcher.rs
core/: Cargo.toml
core/src/: committee_selection.rs  deterministic_shuffle.rs  lcg.rs  lib.rs  merkle_tree.rs  sha256.rs
frontend/: .env  (+9 more)
network/: Cargo.toml  Dockerfile  gcp-test.py
network/examples/: bandwidth_test.rs
network/src/: TODO.md  download_manager.rs  lib.rs  main.rs  peer_list.rs  signed_message.rs  state.rs  tui.rs  util.rs
server/: Cargo.toml
server/src/: app.rs  main.rs  protocol.rs  tui.rs
shared/client/: Cargo.toml
shared/client/src/: cli.rs  client.rs  fetch_data.rs  lib.rs  protocol.rs  serialized_distro.rs  state.rs  testing.rs  trainer.rs  training.rs  tui.rs
shared/client/src/state/: cooldown.rs  evals.rs  init.rs  mod.rs  round_state.rs  stats.rs  steps.rs  train.rs  types.rs  warmup.rs  witness.rs
shared/coordinator/: Cargo.toml
shared/coordinator/src/: commitment.rs  committee_selection.rs  coordinator.rs  data_selection.rs  lib.rs  model.rs  traits.rs
shared/core/: Cargo.toml
shared/core/src/: batch_id.rs  bloom.rs  bounded_queue.rs  boxed_future.rs  cancellable_barrier.rs  data_shuffle.rs  definitions.rs  fixed_string.rs  fixed_vec.rs  interval_tree.rs  lcg.rs  lib.rs  lr_scheduler.rs  merkle_tree.rs  node_identity.rs  serde.rs  serde_utils.rs  sha256.rs  similarity.rs  sized_iterator.rs  small_boolean.rs  swap_or_not.rs  token_size.rs  util.rs
shared/data-provider/: Cargo.toml  README.md
shared/data-provider/examples/: http.rs  tcp.rs
shared/data-provider/src/: data_provider.rs  dataset.rs  dummy.rs  http.rs  hub.rs  lib.rs  local.rs  token_size.rs  traits.rs  transform.rs
shared/data-provider/src/remote/: client.rs  mod.rs  server.rs  shared.rs  tui.rs
shared/data-provider/src/weighted/: http.rs  mod.rs
shared/data-provider/tests/: http.rs  local.rs  weighted.rs
shared/data-provider/tests/resources/: llama2_tokenizer.json
shared/eval/: Cargo.toml
shared/eval/examples/: evaluate.rs
shared/eval/src/: harness.rs  lib.rs  traits.rs
shared/eval/src/tasks/: arc.rs  hellaswag.rs  mmlu_pro.rs  mod.rs
shared/modeling/: Cargo.toml
shared/modeling/examples/: inference.rs  train.rs
shared/modeling/src/: attention.rs  auto_config.rs  auto_model.rs  auto_tokenizer.rs  causal_language_model.rs  consilience.rs  distro.rs  dummy.rs  fp32_gradient_accumulator.rs  hub.rs  lib.rs  llama.rs  llama_for_causal_lm.rs  optimizer.rs  rms_norm.rs  rope.rs  safetensor_loader.rs  safetensor_utils.rs  tensor_parallelism.rs  trainer.rs  traits.rs
shared/modeling/src/models/: consilience.rs  deepseek.rs  llama.rs  mod.rs
shared/network/: Cargo.toml  README.md  multi-bandwidth-test.sh
shared/network/examples/: bandwidth_test.rs  compress_distro_result_comparison.rs
shared/network/src/: allowlist.rs  authenticable_identity.rs  download_manager.rs  lib.rs  local_discovery.rs  networkable_node_identity.rs  p2p_model_sharing.rs  peer_list.rs  router.rs  serde.rs  serializable_kind.rs  serializable_tensor.rs  serialized_distro.rs  signed_message.rs  state.rs  tcp.rs  tui.rs  util.rs
shared/tui/: Cargo.toml  README.md
shared/tui/examples/: logs.rs  minimal.rs  tabs.rs
shared/tui/src/: app.rs  lib.rs  logging.rs  maybe.rs  tabbed.rs  terminal.rs  widget.rs
tools/rust-tools/expand-distro/: Cargo.toml
tools/rust-tools/expand-distro/src/: main.rs
training/: Cargo.toml
training/examples/: inference.rs  training.rs
training/src/: batcher.rs  dataset.rs  lib.rs  llama.rs  llama_for_causal_lm.rs  lr_scheduler.rs  main.rs  safetensor_loader.rs
website/wasm/: Cargo.toml  README.md  build.sh  default.nix  fixup.sh
website/wasm/src/: lib.rs
(+498 files in other folders)
