[workspace]
members = ["architectures/*/*", "shared/*", "tools/rust-tools/*"]
resolver = "2"

[workspace.metadata.crane]
name = "psyche-workspace"

[workspace.package]
version = "0.0.1"

[workspace.dependencies]

psyche-coordinator = { path = "./shared/coordinator" }
psyche-core = { path = "./shared/core" }
psyche-client = { path = "./shared/client" }
psyche-data-provider = { path = "./shared/data-provider" }
psyche-eval = { path = "./shared/eval" }
psyche-network = { path = "./shared/network" }
psyche-serde = { path = "./shared/serde" }
psyche-modeling = { path = "./shared/modeling" }
psyche-tui = { path = "./shared/tui" }
psyche-watcher = { path = "./shared/watcher" }


hf-hub = { git = "https://github.com/NousResearch/hf-hub.git", rev = "7764fac569bb20ba0a84cb2d0685fbd607834005" }
tokio = { version = "1", features = [
    "io-util",
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "time",
] }
tokio-stream = "0.1"
tokio-util = "0.7.12"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "env"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.28"
tracing = { version = "0.1.40", features = ["std"] }
bytes = "1.7.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
postcard = { version = "1.0.10", features = ["use-std"] }
sha2 = "0.10.8"
futures = "0.3.30"
futures-util = "0.3.30"
chrono = "0.4.38"
anchor-lang = "0.29.0"
fast-math = "0.1"
async-trait = "0.1.82"
iroh = "0.26.0"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
indicatif = "0.17.5"
tokenizers = { version = "0.20.0", default-features = false, features = [
    "onig",
] }
# tch = { git = "https://github.com/jquesnelle/tch-rs.git", rev = "af67ef6a6e48f7335b268182c725ef8783a60360" }
# torch-sys = { git = "https://github.com/jquesnelle/tch-rs.git", rev = "af67ef6a6e48f7335b268182c725ef8783a60360" }
tch = { path = "../tch-rs" }
torch-sys = { path = "../tch-rs/torch-sys" }
pretty_assertions = "1.4.1"
time = { version = "0.3.36", features = ["formatting", "macros"] }

# solana-program uses curve25519-dalek v3.2.1, which pins zeroize <1.4 for MSRV cares.
# we don't care about that MSRV guarantee, so we override zeroize dep to be simply "=1"
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/NousResearch/curve25519-dalek.git", rev = "20f6f1540c8ce7fcd54c33470e06032946b2a143" }

[profile.release]
debug = false
