[workspace]
members = [
    "architectures/centralized/*",
    "architectures/decentralized/solana-client",
    "shared/*",
    "tools/rust-tools/*",
]
resolver = "2"

[workspace.metadata.crane]
name = "psyche-workspace"

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
psyche-coordinator = { path = "./shared/coordinator" }
psyche-core = { path = "./shared/core" }
psyche-client = { path = "./shared/client" }
psyche-data-provider = { path = "./shared/data-provider" }
psyche-eval = { path = "./shared/eval" }
psyche-network = { path = "./shared/network" }
psyche-modeling = { path = "./shared/modeling" }
psyche-tui = { path = "./shared/tui" }
psyche-watcher = { path = "./shared/watcher" }

psyche-solana-coordinator = { path = "./architectures/decentralized/solana-coordinator/programs/solana-coordinator" }
psyche-solana-client = { path = "./architectures/decentralized/solana-client" }


hf-hub = { git = "https://github.com/NousResearch/hf-hub.git", rev = "269dc3df4e194f9071ddbdbd25ed90d4990f9262" }
tokio = { version = "1", features = [
    "io-util",
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "time",
] }
tokio-stream = "0.1"
tokio-util = "0.7.12"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "env"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.28"
tracing = { version = "0.1.40", features = ["std"] }
bytes = "1.7.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
postcard = { version = "1.0.10", features = ["use-std"] }
sha2 = "0.10.8"
futures = "0.3.30"
futures-util = "0.3.30"
chrono = "0.4.38"
fast-math = "0.1"
async-trait = "0.1.82"
iroh = "0.31.0"
iroh-blobs = { version = "0.31.0", features = ["rpc"] }
iroh-gossip = "0.31.0"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
indicatif = "0.17.5"
tokenizers = { version = "0.20.0", default-features = false, features = [
    "onig",
] }
tch = { git = "https://github.com/jquesnelle/tch-rs.git", rev = "e8b64d8dedccbc0092ad43b49a01a5355f0feee7" }
torch-sys = { git = "https://github.com/jquesnelle/tch-rs.git", rev = "e8b64d8dedccbc0092ad43b49a01a5355f0feee7" }
# tch = { path = "../tch-rs" }
# torch-sys = { path = "../tch-rs/torch-sys" }
time = { version = "0.3.36", features = ["formatting", "macros"] }
serde_with = { version = "3.11.0", features = ["macros"] }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
thiserror = "2.0.3"
toml = "0.8.19"
clap-markdown = "0.1.4"

anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5", features = [
    "async",
] }

# dev only
test-log = { version = "0.2.16", features = ["trace"] }
pretty_assertions = "1.4.1"


[profile.release]
debug = false
