[package]
name = "psyche-server"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-client = { path = "../client" }
psyche-coordinator = { path = "../coordinator" }
psyche-network = { path = "../network" }
psyche-tui = { path = "../tui" }
psyche-watcher = { path = "../watcher" }
iroh = {workspace = true}
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
postcard = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }