[package]
name = "psyche-training"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-core = { path = "../core" }
psyche-client = { path = "../client" }
psyche-data-provider = { path = "../data-provider" }
tch = { git = "https://github.com/LaurentMazare/tch-rs.git", rev = "a4e9362e4acbbde54ab9503ab9e37a10835e7547" }
torch-sys = { git = "https://github.com/LaurentMazare/tch-rs.git", rev = "a4e9362e4acbbde54ab9503ab9e37a10835e7547" }
rand = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = { workspace = true }
byteorder = "1.4.3"
safetensors = "0.3.0"
tokenizers = { version = "0.20.0", default-features = false, features = ["onig"] }


# for examples
[dev-dependencies]
clap = { workspace = true }
