[package]
name = "psyche-client"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-core = { workspace = true, features = ["rand"] }
psyche-coordinator.workspace = true
psyche-data-provider.workspace = true
psyche-eval.workspace = true
psyche-modeling.workspace = true
psyche-network.workspace = true
psyche-tui.workspace = true
psyche-watcher.workspace = true
postcard.workspace = true
anyhow.workspace = true
serde.workspace = true
tch.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
rand.workspace = true
futures.workspace = true
hex = "0.4.3"
lazy_static = "1.5.0"
wandb = { git = "https://github.com/NousResearch/wandb-rs.git", rev = "ee26b3bc3b9d4882df04c29a223dc256488d544d" }

[features]
parallelism = ["psyche-modeling/parallelism"]
