[package]
name = "psyche-client"
version.workspace = true
edition = "2021"

[dependencies]
psyche-core = { workspace = true, features = ["rand"] }
psyche-coordinator.workspace = true
psyche-data-provider.workspace = true
psyche-eval.workspace = true
psyche-modeling.workspace = true
psyche-network.workspace = true
psyche-tui.workspace = true
psyche-watcher.workspace = true
postcard.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tch.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
rand.workspace = true
futures.workspace = true
hex = "0.4.3"
lazy_static = "1.5.0"
wandb = { git = "https://github.com/NousResearch/wandb-rs.git", rev = "ed65ecdc78969c943a755fc45246b94d7390ba5f" }
rand_chacha.workspace = true
thiserror.workspace = true
time.workspace = true
hf-hub.workspace = true
clap.workspace = true

[features]
parallelism = ["psyche-modeling/parallelism"]
