[package]
name = "psyche-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-core.workspace = true
psyche-serde.workspace = true
async-trait.workspace = true
tracing.workspace = true
anchor-lang.workspace = true

[target.'cfg(target_os = "solana")'.dependencies]
anchor-lang.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies]
serde.workspace = true
