[package]
name = "psyche-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-core.workspace = true
psyche-serde.workspace = true
async-trait.workspace = true
tracing.workspace = true
anchor-lang.workspace = true
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
serde_with.workspace = true
serde.workspace = true

