[package]
name = "psyche-data-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-coordinator.workspace = true
psyche-core.workspace = true
psyche-watcher.workspace = true
psyche-network.workspace = true
hf-hub = { git = "https://github.com/huggingface/hf-hub.git", rev = "a66bdcf2f2664a55ab3a1415184c7aebd8ac4ed5" }
parquet = { version = "51.0.0" }
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
memmap2.workspace = true
rand_chacha.workspace = true
rand.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true

[dev-dependencies]
psyche-tui = { path = "../tui" }
