[package]
name = "psyche-data-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-coordinator.workspace = true
psyche-core.workspace = true
psyche-watcher.workspace = true
psyche-tui.workspace = true
psyche-network.workspace = true
hf-hub = { git = "https://github.com/NousResearch/hf-hub.git", rev = "2dfe54b6916deba4f2c34fd2b7c184aa0683755c" }
parquet = "51.0.0"
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
memmap2.workspace = true
rand_chacha.workspace = true
rand.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true

[dev-dependencies]
psyche-tui.workspace = true
tokenizers.workspace = true
pretty_assertions.workspace = true
