[package]
name = "psyche-data-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-coordinator.workspace = true
psyche-core.workspace = true
psyche-watcher.workspace = true
psyche-tui.workspace = true
psyche-network.workspace = true
hf-hub.workspace = true
parquet = "51.0.0"
tokio.workspace = true
anchor-lang.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
memmap2.workspace = true
rand_chacha.workspace = true
rand.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
postcard.workspace = true
bytemuck.workspace = true

[dev-dependencies]
psyche-tui.workspace = true
tokenizers.workspace = true
pretty_assertions.workspace = true
