[package]
name = "psyche-modeling"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-core = { path = "../core" }
psyche-data-provider = { path = "../data-provider" }
tch.workspace = true
torch-sys.workspace = true
rand.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
memmap2.workspace = true
tokenizers.workspace = true
tracing.workspace = true
byteorder = "1.4.3"
safetensors = "0.3.0"

# for examples
[dev-dependencies]
clap = { workspace = true }

[features]
#parallelism = ["cudarc", "half"]
parallelism = []
