[package]
name = "psyche-modeling"
version.workspace = true
edition = "2021"

[dependencies]
tch.workspace = true
torch-sys.workspace = true
rand.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
memmap2.workspace = true
tokenizers.workspace = true
tracing.workspace = true
byteorder = "1.4.3"
safetensors = "0.3.0"
thiserror.workspace = true
tokio-util.workspace = true
psyche-core.workspace = true

# for examples
[dev-dependencies]
clap.workspace = true
psyche-data-provider.workspace = true
psyche-tui.workspace = true
itertools = "0.14"

[features]
parallelism = ["tch/nccl", "torch-sys/nccl"]
