[package]
name = "psyche-network"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-tui.workspace = true
psyche-core.workspace = true
psyche-modeling.workspace = true
iroh.workspace = true
iroh-blobs.workspace = true
iroh-gossip.workspace = true
iroh-relay.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
bytes.workspace = true
rand.workspace = true
postcard.workspace = true
sha2.workspace = true
futures-util.workspace = true
chrono.workspace = true
thiserror.workspace = true
tch.workspace = true
data-encoding = "2.6.0"
ed25519 = "2.2.3"
serde_json.workspace = true
serde_bytes = "0.11.15"
tokenizers.workspace = true
get_if_addrs = "0.5.3"
flate2 = "1.0"
url = { version = "2.5", features = ["serde"] }

# for examples
[dev-dependencies]
clap.workspace = true
