[package]
name = "psyche-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
tui-logger = { version = "0.12.0", features = ["tracing-support"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
ratatui = "0.28.1"
tracing.workspace = true
anyhow.workspace = true
tokio-util.workspace = true
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
rand.workspace = true
