[package]
name = "psyche-deserialize-zerocopy-wasm"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
psyche-solana-coordinator = { path = "../../architectures/decentralized/solana-coordinator/programs/solana-coordinator" }
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
ts-rs.workspace = true
psyche-core.workspace = true
