[package]
name = "psyche-centralized-client"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-centralized-shared = { path = "../shared" }
psyche-client.workspace = true
psyche-coordinator.workspace = true
psyche-network.workspace = true
psyche-tui.workspace = true
psyche-watcher.workspace = true
rand.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
