[package]
name = "psyche-centralized-client"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-centralized-shared = { path = "../shared" }
psyche-client.workspace = true
psyche-coordinator.workspace = true
psyche-eval.workspace = true
psyche-network.workspace = true
psyche-tui.workspace = true
psyche-watcher.workspace = true
rand.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-util.workspace = true

[target.'cfg(windows)'.dependencies]
tch.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
psyche-client = { workspace = true, features = ["parallelism"] }
