[package]
name = "psyche-centralized-server"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-centralized-shared = { path = "../shared" }
psyche-coordinator.workspace = true
psyche-network.workspace = true
psyche-tui.workspace = true
psyche-watcher.workspace = true
psyche-core.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
bytes.workspace = true
rand.workspace = true
postcard.workspace = true
sha2.workspace = true
futures-util.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
