[package]
name = "psyche-centralized-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche-coordinator.workspace = true
psyche-core.workspace = true
psyche-network.workspace = true
psyche-client.workspace = true
psyche-watcher.workspace = true
anchor-lang.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
serde.workspace = true
ts-rs.workspace = true
