[package]
name = "testing"
edition = "2021"
version.workspace = true

[dependencies]
psyche-centralized-client = { path = "../client" }
psyche-centralized-server = { path = "../server", features = ["testing"] }
psyche-centralized-shared = { path = "../shared" }
psyche-client.workspace = true
psyche-coordinator.workspace = true
psyche-data-provider.workspace = true
psyche-network.workspace = true
tokio-util.workspace = true

tokio.workspace = true
