[package]
name = "psyche-solana-client"
edition = "2021"
version.workspace = true

[dependencies]
anchor-client.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytemuck.workspace = true
clap.workspace = true
futures-util.workspace = true
psyche-watcher.workspace = true
psyche-core.workspace = true
psyche-solana-coordinator.workspace = true
psyche-client.workspace = true
psyche-eval.workspace = true
psyche-coordinator.workspace = true
psyche-network.workspace = true
psyche-tui.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
tracing.workspace = true
rand.workspace = true
time.workspace = true
home = "0.5.9"
solana-account-decoder-client-types = "=2.1.4"

[features]
solana-localnet-tests = []
